--- a/ProgressWebview/lightTheme.css
+++ b/ProgressWebview/lightTheme.css
@@ -10,7 +10,7 @@ textarea {
 button {
   background-color: rgb(225, 225, 225);
   color: black;
-  border: 0.25vw solid rgb(195, 195, 195);
+  border-color: rgb(195, 195, 195);
 }
 button:hover {
   background-color: rgb(195, 195, 195);
@@ -23,10 +23,10 @@ button:hover {
 #displayBox {
   color: black;
   background-color: rgba(223, 223, 223, 0.75);
-  border: 0.25vw solid black;
+  border-color: black;
 }
 .displayColour {
-  border: 0.25vw solid black;
+  border-color: black;
 }
 #graphData {
   background-color: rgb(225, 225, 225);
